refactos et introduction icone et image

--- a/index.html
+++ b/index.html
@@ -41,6 +41,11 @@
     <div class="lateral-menu d-flex align-items-center">
       <ul>
         <li class="mb-4">
+          <div id="profile-picture-container">
+            <img id="profile-picture" src="profile.jpeg" alt="profile">
+          </div>
+        </li>
+        <li class="mb-4">
           <a id="experiencesLink" href="#" data-target="#experiences" class="text-light">Expériences</a>
         </li>
         <li class="mb-4">
@@ -74,23 +79,24 @@
             <div class="col-md-4">
               <div class="card">
                 <div class="card-body">
-                  <h5 class="card-title">Email</h5>
-                  <p class="card-text">your@email.com</p>
+                  <div class="card-title contact-header">Email<img class="contact-icon" src="icons/envelope-solid.svg" alt="email"></div>
+                  <p class="card-text">andy.malonda1@gmail.com</p>
                 </div>
               </div>
             </div>
             <div class="col-md-4">
               <div class="card">
                 <div class="card-body">
-                  <h5 class="card-title">LinkedIn</h5>
-                  <p class="card-text">linkedin.com/in/yourprofile</p>
+                  <div class="card-title contact-header">LinkedIn<img class="contact-icon" src="icons/linkedin.svg" alt="linkedin"></i></div>
+                  <p class="card-text">
+                    <a href="https://www.linkedin.com/in/andy-malonda/">linkedin.com/in/andy-malonda</a></p>
                 </div>
               </div>
             </div>
             <div class="col-md-4">
               <div class="card">
                 <div class="card-body">
-                  <h5 class="card-title">GitHub</h5>
+                  <div class="card-title contact-header">GitHub<img class="contact-icon" src="icons/github.svg" alt="github"></div>
                   <p class="card-text">github.com/yourusername</p>
                 </div>
               </div>
